# SuShe-NG

./: .gitignore  __init__.py  main.py  metadata.py  pyproject.toml  requirements.txt
build_scripts/: build_pyinstaller.py
examples/: testlist.json
models/: __init__.py  album.py  album_table_model.py
resources/: __init__.py  points.json
resources/icons/: README.md
utils/: __init__.py  album_list_manager.py  config.py  list_repository.py  logging_utils.py  simple_collection_manager.py  theme.py
views/: __init__.py  collection_selection_dialog.py  enhanced_drag_drop.py  import_dialog.py  initialization.py  main_window.py  new_list_dialog.py  sidebar_manager.py  sidebar_panel.py
views/resources/: sidebar_style.css  spotify_sidebar.css
